--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,24 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // 加载项目中用到的第三方库
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    //    compile 'com.github.GcsSloop:SUtil:v1.0.2'
+    compile files('libs/universal-image-loader-1.9.5.jar')
+    // 后续学习库的不同
+//    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+//    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    // JitPack
+    compile 'com.github.GcsSloop:SUtil:v1.0.2'
 }
