--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:icon="@drawable/actionbar_back"
+            android:name=".ImageActivity" />
+
     </application>
 
 </manifest>
